@@ -1,3 +1,11 @@
+2002-05-16  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* mingwex/snprintf.c: Split out vsnprintf to....
+	* mingwex/vsnprintf.c: New file.
+	* mingwex/snwprintf.c: Split out vsnwprintf to...
+	* mingwex/vsnwprintf.c: New file.
+	* mingwex/Makefile.in: Adjust DISTFILES and STDIO_STUB_OBJS.
+
 2002-05-15  Pascal Obry  <obry@gnat.com>
 
 	* include/dirent.h (DIR): Change dd_stat type to int.
